--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -13,3 +13,15 @@
 .font_grey {
     color: #959595;
 }
+.br_tp {
+    border-top: 1px solid #e5e5e5;
+}
+.br_bt {
+    border-bottom: 1px solid #e5e5e5;
+}
+.br_rg {
+    border-right: 1px solid #e5e5e5;
+}
+.br_lf {
+    border-left: 1px solid #e5e5e5;
+}
